--- a/manifest.json
+++ b/manifest.json
@@ -1,13 +1,13 @@
 {
-    "name": "Template Plugin",
+    "name": "accswitch",
     "description": "A plugin for use as a template.",
     "authors": [
         {
-            "name": "You!",
-            "id": "YOUR_ID_HERE"
+            "name": "kancig",
+            "id": "69420"
         }
     ],
-    "main": "src/index.ts",
+    "main": "AccountSwitcher.plugin.js",
     "vendetta": {
         "icon": "ic_badge_staff"
     }
